syntax = "proto3";

option java_package = "eu.long1.nativecamera.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

import "google/protobuf/empty.proto";
import "models.proto";

service NativeCamera {
  rpc InitializeCamera (InitializeCameraRequest) returns (InitializeCameraResponse) {
  }
  rpc UpdateCamera (CameraState) returns (CameraState) {
  }
  rpc ListCameras (google.protobuf.Empty) returns (ListCamerasResponse) {
  }
}

message InitializeCameraRequest {
  string channel_name = 1;
  CameraState state = 2;
}

message InitializeCameraResponse {
  int64 textureId = 1;
  CameraState state = 2;
  CameraState.Orientation orientation = 3;
  Size preview_size = 4;
  repeated AspectRatio supported_ratio = 5;
  repeated Range supported_preview_fps = 6;
}

message ListCamerasResponse {
  repeated CameraInfo cameras = 1;
}